# guardrails

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.ja.md  README.md
.analysis/: architecture.md  architecture.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
adr/: 0001-fall-back-to-temp-dir-for-biome-temp-files.md  README.md
hooks/: install.sh
src/: ast.rs  ast_security.rs  biome.rs  color.rs  config.rs  download.rs  main.rs  oxlint.rs  parse_json.rs  reporter.rs  resolve.rs  scanner.rs  tempfile_util.rs
src/rules/: architecture.rs  bundle_size.rs  cargo_lock.rs  crypto_weak.rs  dom_access.rs  eval.rs  flaky_test.rs  generated_file.rs  hardcoded_secrets.rs  http_resource.rs  mod.rs  naming.rs  no_use_effect.rs  open_redirect.rs  raw_html.rs  security.rs  sensitive_file.rs  sensitive_logging.rs  sync_io.rs  test_assertion.rs  test_location.rs  todo_macro.rs  transaction.rs  unsafe_usage.rs  unwrap_usage.rs
tests/: integration.rs
