[package]
name = "guardrails"
version = "0.13.0"
edition = "2021"
rust-version = "1.92"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tempfile = "3"
libc = "0.2"
oxc_allocator = "0.121.0"
oxc_parser = "0.121.0"
oxc_ast = "0.121.0"
oxc_span = "0.121.0"
oxc_ast_visit = "0.121.0"
ureq = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
